# linear

./: .gitignore  README.md  Untitled.ipynb  main.py  pyproject.toml
config/: config.yaml
notebooks/: 01_eda_setup.ipynb
src/: __init__,py  data_manager.py  ggs.py  logger_setup.py  optimisation.py  preprocessing.py  utils.py  xgb.py  xgboost_model.py
